<resources>
    <string name="app_name">RentZHub</string>
    <string name="app_caption">Search.Rent.Live</string>
    <string name="title_activity_login">Log In</string>
    <string name="post_caption">List your Property at your convenience. Advertise to millions of home seekers and get genuine leads at them. Join network of thousands of tenants and house owners and close deals at one place.
    </string>
    <string name="searchcaption">Find the perfect home for rent across various cities at just one place.</string>


    <!-- OTP VALUE KEY-->
    <string name="sendotp_key">206057AUUQCcrO3y8a5ab93d44</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email/Mobile Number</string>
    <string name="prompt_only_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_otp">Enter OTP</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This Email address or Phone is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="title_activity_signup_owner">RentHub</string>
    <!-- Strings related to confrimpassword-->
    <string name="prompt_oldpassword">Old Password</string>
    <string name="prompt_newpassword">New Password</string>
    <string name="prompt_confirmnewpassword">Confirm New Password</string>

    <!-- Strings related to signup -->

    <string name="prompt_name">Your Name</string>
    <string name="prompt_onlyEmail">Email Address</string>
    <string name="prompt_onlyPhone">Phone Number</string>
    <string name="prompt_address">Permanent Address</string>
    <string name="prompt_pincode">Pincode</string>
    <array name="marrystatus">
        <item>Marital Status</item>
        <item>Married</item>
        <item>Unmarried</item>
    </array>
    <array name="citylist">
        <item>Select City</item>
        <item>Lucknow</item>
        <item>Kanpur</item>
        <item>Delhi</item>
        <item>Gurgaon</item>
        <item>Mumbai</item>
        <item>Pune</item>
        <item>Kolkata</item>
        <item>Chennai</item>
        <item>Bangalore</item>
        <item>Ahmedabad</item>
        <item>Hyderabad</item>
        <item>Jaipur</item>
        <item>Ghaziabad</item>
        <item>Noida</item>
        <item>Patna</item>
        <item>Chandigarh</item>
        <item>Allahabad</item>
    </array>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_home">Search</string>
    <string name="title_dashboard">Account</string>
    <string name="title_notifications">Manage</string>
    <string name="title_messages">Messages</string>
    <string name="title_post">Rent Home</string>
    <!-- Strings related to renthome -->
    <string name="prompt_onlyAddress">Your Address</string>
    <string name="prompt_onlyPincode">Pincode</string>
    <array name="city">
        <item>Select City</item>
        <item>Lucknow</item>
        <item>Kanpur</item>
        <item>Delhi</item>
        <item>Gurgaon</item>
        <item>Mumbai</item>
        <item>Pune</item>
        <item>Kolkata</item>
        <item>Chennai</item>
        <item>Bangalore</item>
        <item>Ahmedabad</item>
        <item>Hyderabad</item>
        <item>Jaipur</item>
        <item>Ghaziabad</item>
        <item>Noida</item>
        <item>Patna</item>
        <item>Chandigarh</item>
        <item>Allahabad</item>
    </array>
    <array name="roomstatus">
        <item>Select type of room</item>
        <item>Single</item>
        <item>2BHK</item>
        <item>3BHK</item>

    </array>
    <string name="prompt_amount">Rent amount per month</string>
    <string name="Room">Select Room Status</string>

    <string name="title_activity_image_upload">ImageUpload</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_about_us">AboutUs</string>
</resources>
